--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Mobile Metas -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+      name="description"
+      content="A blog about web development and programming"
     />
-    <!-- Site Metas -->
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="keywords" content="web development, programming, blog" />
+    <meta name="author" content="Devlogex" />
 
-    <title>Fregg</title>
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Devlogex" />
+    <meta
+      property="og:description"
+      content="A blog about web development and programming"
+    />
+    <meta property="og:image" content="/favicon.ico" />
+    <meta property="og:url" content="https://devlogex.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Devlogex" />
+    <meta
+      name="twitter:description"
+      content="A blog about web development and programming"
+    />
+    <meta name="twitter:image" content="/favicon.ico" />
+    <meta name="twitter:url" content="https://devlogex.com" />
 
     <!-- slider stylesheet -->
     <link
