revert header info

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     <meta name="twitter:image" content="/favicon.ico" />
     <meta name="twitter:url" content="https://devlogex.com" />
 
+    <title>Devlogex</title>
+
     <!-- slider stylesheet -->
     <link
       rel="stylesheet"
